tests/errors/duplicate_pin.nm
abstract component Main {
    pin FOO: input;
    pin FOO: input;
}